Add test button to test "AI"

--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../src/style.css">
 </head>
 <body>
+    <button type="button">Test</button>
     <div class = "game-container">
         <div class = "left-gameboard"></div>
         <div class = "right-gameboard"></div>
