Add grid titles, area for logs

--- a/src/template.html
+++ b/src/template.html
@@ -8,9 +8,17 @@
     <script src = "../src/index.js" defer></script>
 </head>
 <body>
+    <header>Battleship</header>
+    <div class = 'titles'>
+        <div>Player</div>
+        <div>Computer</div>
+    </div>
     <div class = "game-container">
         <div class = "left-gameboard"></div>
         <div class = "right-gameboard"></div>
+    </div>
+    <div class = "logs">
+        
     </div>
 </body>
 </html>
